--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umera Malek Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="./style.css" rel="stylesheet" />
 
 </head>
@@ -17,16 +17,16 @@
     <div class="nav-bar">
         <ul class = "list">
             <li class ="list-items">
-                <a href="#about" class ="nav_links">About</a>
+                <a href="#about" class ="nav-links">About</a>
             </li>
             <li class ="list-items">
-                <a href="#projects" class ="nav_links">Projects</a>
+                <a href="#projects" class ="nav-links">Projects</a>
             </li>
             <li class ="list-items">
-                <a href="#resume" class ="nav_links">Resume</a>
+                <a href="#resume" class ="nav-links">Resume</a>
             </li>
             <li class ="list-items">
-                <a href="#contact" class ="nav_links">Contact</a>
+                <a href="#contact" class ="nav-links">Contact</a>
             </li>
         </ul>
     </div>
