added porjects, resume and footer in html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umera Malek Portfolio</title>
+    <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
     <link href="./style.css" rel="stylesheet" />
 
@@ -32,5 +33,70 @@
     </div>
 </header>
     
+<main>
+    <section class="intro">
+        <h1> Umera Malek</h1>
+    </section>
+
+    <div class = "about-me-section about">
+        <h1> About me </h1>
+        <h2> Programmer in Training </h2>
+        <p>My name is Umera. Currently I am studying full stack web develpment at University of Berkeley. I am hoping to learn a lot and make use of the knowledge for my career path. Everyday I am learning new things and absolutely loving the challenge.</p>
+    </div>
+
+    <div class="projects projects-section">
+        <div class = "main-grid">
+            <h1> Projects </h1>
+            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+        </div>
+        <div class = "main-grid">
+            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+        </div>
+        <div class = "main-grid">
+            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+        </div>
+        <div class = "main-grid">
+            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+        </div>
+        <div class = "main-grid">
+            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+        </div>
+        <div class = "main-grid">
+            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+        </div>
+    </div>
+
+    <div class = "resume resume-section">
+        <h1> Resume </h1>
+        <img scr="" href="" class="resume-image">
+    </div>
+
+     <!-- Footer-->
+     <footer class="footer text-center" id="contact">
+        <div class="container">
+            <div class="row">
+            
+                <!-- Footer Social Icons-->
+                <div class=" text-center text-white ">
+                    <h4 class="text-uppercase mb-4">Around the Web</h4>
+                    <a class="btn btn-outline-light btn-social mx-1" href="mailto:umeramalek796@gmail.com!" target="_blank"><i class="fas fa-envelope-square"></i>
+                    <a class="btn btn-outline-light btn-social mx-1" href="www.linkedin.com/in/umeramalek" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/umeramalek" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Copyright Section-->
+    <div class="copyright py-4 text-center text-white">
+        <div class="container"><small> Made by Umera Malek</small></div>
+    </div>
+
+</main>
 </body>
 </html>
