--- a/index.html
+++ b/index.html
@@ -38,41 +38,52 @@
         <h1> Umera Malek</h1>
     </section>
 
-    <div class = "about-me-section about">
+    <div class = "about-me-section" id="about">
         <h1> About me </h1>
         <h2> Programmer in Training </h2>
         <p>My name is Umera. Currently I am studying full stack web develpment at University of Berkeley. I am hoping to learn a lot and make use of the knowledge for my career path. Everyday I am learning new things and absolutely loving the challenge.</p>
     </div>
 
-    <div class="projects projects-section">
+    <div class="projects-section" id="projects">
         <div class = "main-grid">
             <h1> Projects </h1>
-            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            <a href="
+            https://ghmurphy2.github.io/EzVibez/" target="_blank">
+                <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
+            </a>
             <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
         </div>
         <div class = "main-grid">
-            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
-            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+            <a href="
+            https://github.com/umeramalek/team-profile-generator" target="_blank">
+                <img class="slide-in from-left" src="./img/team.png" alt="team icon">
+            </a>
+            <p class="slide-in from-right"> Team Profile generator is a Node js command line application that takes in information on about employees on a software engineering team, then generates an HTML webpage that displays summaries for each person. Testing is key to making code maintainable, so you’ll also write a unit test for every part of your code and ensure that it passes each test.</p>
         </div>
         <div class = "main-grid">
-            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
-            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+            <a href="
+            https://umeramalek.github.io/timed-quiz/" target="_blank">
+                <img class="slide-in from-left" src="./img/quiz.png" alt="quiz icon">
+            </a>
+            <p class="slide-in from-right"> Code quiz is a 10 question coding quiz on jaavscipt. This is a timed quiz, for every right answer you get 5 seconds added to your time and for every wring answer you get 20 seconds subtracted from your time. Your score are stored with your name.</p>
         </div>
         <div class = "main-grid">
-            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
-            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+            <a href="
+            https://umeramalek.github.io/workday-scheduler/" target="_blank">
+                <img class="slide-in from-left" src="./img/schedular.png" alt="daily schedular icon">
+            </a>
+            <p class="slide-in from-right"> Daily schedular is a simple calendar application that allows a user to save events for each hour of the day by modifying starter code. This app will run in the browser and feature dynamically updated HTML and CSS powered by jQuery.</p>
         </div>
         <div class = "main-grid">
-            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
-            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
-        </div>
-        <div class = "main-grid">
-            <img class="slide-in from-left" src="./img/lyrics.png" alt="music icon">
-            <p class="slide-in from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+            <a href="
+            https://umeramalek.github.io/weather-report/" target="_blank">
+                <img class="slide-in from-left" src="./img/weather.png" alt="weather icon">
+            </a>
+            <p class="slide-in from-right"> Weather Dashboard is a site created with a third party weather API, that displays current weather and a five day forecast upon search by city </p>
         </div>
     </div>
 
-    <div class = "resume resume-section">
+    <div class = "resume-section" id="resume">
         <h1> Resume </h1>
         <img scr="" href="" class="resume-image">
     </div>
