fixed small bugs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+<!-- Navbar -->
 <header class ="image">
     <a class = "logo" aria-label="homepage">Umera Malek</a>
     <div class="nav-bar">
@@ -36,12 +36,14 @@
     
 <main class="bg-image">
 
+    <!-- About Me -->
     <div class = "about-me-section about slide-in">
         <h1> About me </h1>
         <h3> Programmer in Training </h3>
         <p>My name is Umera. Currently I am studying full stack web develpment at University of Berkeley. I am hoping to learn a lot and make use of the knowledge for my career path. Everyday I am learning new things and absolutely loving the challenge.</p>
     </div>
 
+    <!-- Projects -->
     <div class="projects-section" id="projects">
         <h1 class="about slide-in"> Projects </h1>
         <div class = "main-grid">
@@ -81,6 +83,7 @@
         </div>
     </div>
 
+    <!-- Resume -->
     <div class = "resume-section slide-in " id="resume">
         <h1> Resume </h1>
         <a href="./files/Umera Malek SE Resume.pdf" target="_blank">
@@ -94,16 +97,16 @@
             <div class="row">
             
                 <!-- Footer Social Icons-->
-                <div class=" text-center text-white ">
+                <div class=" text-center text-black ">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
-                    <a class="btn btn-outline-light btn-social mx-1" href="mailto:umeramalek796@gmail.com!" target="_blank"><i class="fas fa-envelope-square"></i>
-                    <a class="btn btn-outline-light btn-social mx-1" href="www.linkedin.com/in/umeramalek" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/umeramalek" target="_blank"><i class="fab fa-github"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1" href="mailto:umeramalek796@gmail.com!" target="_blank"><i class="fas fa-envelope-square"></i>
+                    <a class="btn btn-outline-dark btn-social mx-1" href="www.linkedin.com/in/umeramalek" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/umeramalek" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
     </footer>
-    <!-- Copyright Section-->
+    <!-- Made By Section-->
     <div class="copyright py-4 text-center text-white">
         <div class="container"><small> Made by Umera Malek</small></div>
     </div>
