fixed the linkedin link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class=" text-center text-black ">
                     <h4 class="text-uppercase mb-4">Around the Web</h4>
                     <a class="btn btn-outline-dark btn-social mx-1" href="mailto:umeramalek796@gmail.com!" target="_blank"><i class="fas fa-envelope-square"></i>
-                    <a class="btn btn-outline-dark btn-social mx-1" href="www.linkedin.com/in/umeramalek" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-dark btn-social mx-1" href="https://www.linkedin.com/in/umeramalek/" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/umeramalek" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
