--- a/index.html
+++ b/index.html
@@ -46,40 +46,61 @@
     <!-- Projects -->
     <div class="projects-section" id="projects">
         <h1 class="about slide-in"> Projects </h1>
+        
+
         <div class = "main-grid">
             <a href="
             https://ghmurphy2.github.io/EzVibez/" target="_blank">
-                <img class="slide-in is-visible from-left" src="./img/lyrics.png" alt="music icon">
+            <img class="slide-in is-visible from-left" src="./img/lyrics.png" alt="music icon">
             </a>
-            <p class="slide-in is-visible from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track</p>
+            <p class="slide-in is-visible from-right"> EzVibez is a fun and dynamic lyric analyzer that lets you have fun while you think deep on your favorite track </p>
+                <a href="https://github.com/umeramalek/EzVibez" target="_blank">
+                    <i class="fab fa-github-square fa-10x icon-img" data-fa-transform="right-20" ></i>
+                </a>    
         </div>
+
         <div class = "main-grid">
             <a href="
             https://github.com/umeramalek/team-profile-generator" target="_blank">
                 <img class="slide-in is-visible from-left" src="./img/team.png" alt="team icon">
             </a>
             <p class="slide-in is-visible from-right"> Team Profile generator is a Node js command line application that takes in information on about employees on a software engineering team, then generates an HTML webpage that displays summaries for each person. Testing is key to making code maintainable, so you’ll also write a unit test for every part of your code and ensure that it passes each test.</p>
+            <a href="https://github.com/umeramalek/team-profile-generator" target="_blank">
+                <i class="fab fa-github-square fa-10x icon-img" data-fa-transform="right-20" ></i>
+            </a> 
         </div>
+
         <div class = "main-grid">
             <a href="
             https://umeramalek.github.io/timed-quiz/" target="_blank">
                 <img class="slide-in  is-visible from-left" src="./img/quiz.png" alt="quiz icon">
             </a>
             <p class="slide-in is-visible from-right"> Code quiz is a 10 question coding quiz on jaavscipt. This is a timed quiz, for every right answer you get 5 seconds added to your time and for every wring answer you get 20 seconds subtracted from your time. Your score are stored with your name.</p>
+            <a href="https://github.com/umeramalek/timed-quiz" target="_blank">
+                <i class="fab fa-github-square fa-10x icon-img" data-fa-transform="right-20" ></i>
+            </a>
         </div>
+
         <div class = "main-grid">
             <a href="
             https://umeramalek.github.io/workday-scheduler/" target="_blank">
                 <img class="slide-in is-visible from-left" src="./img/schedular.png" alt="daily schedular icon">
             </a>
             <p class="slide-in is-visible from-right"> Daily schedular is a simple calendar application that allows a user to save events for each hour of the day by modifying starter code. This app will run in the browser and feature dynamically updated HTML and CSS powered by jQuery.</p>
+            <a href="https://github.com/umeramalek/workday-scheduler" target="_blank">
+                <i class="fab fa-github-square fa-10x icon-img" data-fa-transform="right-20" ></i>
+            </a>
         </div>
+
         <div class = "main-grid">
             <a href="
             https://umeramalek.github.io/weather-report/" target="_blank">
                 <img class="slide-in  is-visible from-left" src="./img/weather.png" alt="weather icon">
             </a>
             <p class="slide-in  is-visible from-right"> Weather Dashboard is a site created with a third party weather API, that displays current weather and a five day forecast upon search by city </p>
+            <a href="https://github.com/umeramalek/weather-report" target="_blank">
+                <i class="fab fa-github-square fa-10x icon-img" data-fa-transform="right-20" ></i>
+            </a>
         </div>
     </div>
 
